--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                     <td><span style="font-size: 168px;-webkit-text-fill-color: rgba(0, 128, 128, 0.829); width: fit-content; padding-left: 10px; padding-right: 10px"><i class="fa fa-envelope"></i></span>
                     </td>
                     <td>
-                        <span style="font-size: 20px;">E-Mail: rbtailab@alfurat.org</span><br>
-                        <span style="font-size: 20px;">Phone: Mr.Name Lstname +963991112233</span><br>
-                        <span style="font-size: 20px;">Syria - Dier EzZowr - Faculty of Mechanical and Electrical Engineering</span>
+                        <span style="font-size: 20px;">E-Mail: </span><br>
+                        <span style="font-size: 20px;">Phone: Mr.Name Lstname 000-111-222-333</span><br>
+                        <span style="font-size: 20px;">Address: </span>
                     </td>
                 </tr>
             </table>
