--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </td>
                     <td>
                         <span style="font-size: 20px;">E-Mail: </span><br>
-                        <span style="font-size: 20px;">Phone: Mr.Name Lstname 000-111-222-333</span><br>
+                        <span style="font-size: 20px;">Phone: Mr.---- ---- 000-111-222-333</span><br>
                         <span style="font-size: 20px;">Address: </span>
                     </td>
                 </tr>
