--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#sdg9"><img src="./img/sdg9.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Looking For Innovation</span>
                 <br>
-            <img src="./img/sdg5.png" class="sdg" style="margin-bottom: 10px" alt="">
+            <a href="sgd5"><img src="./img/sdg5.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Commited to Gender Equality</span>
                 <br>
             <img src="./img/sdg7.png" class="sdg" style="margin-bottom: 10px" alt="">
@@ -201,6 +201,40 @@
                     <td style="font-size: 80px; -webkit-text-fill-color: teal"><span>9<span style="-webkit-text-fill-color: tomato;">.</span>5<span style="-webkit-text-fill-color: tomato;">.</span></span></td>
                     <td style="padding-left: 20px; font-size: 20px; width: 40vw; word-wrap:break-word; display: inline-block;">
                             Enhance scientific research, upgrade the technological capabilities of industrial sectors in all countries, in particular developing countries, including, by 2030, encouraging innovation and substantially increasing the number of research and development workers per 1 million people and public and private research and development spending
+                    </td>
+                    <td></td>
+                    <td>
+                        <a href="#top"><button class="mainBtn" style="margin-top: 60px;" id="back2"> < Back</button></a>
+                    </td>
+                </tr>
+            </table>
+        </center>
+    </div>
+<div id="sdg5" style="height: 100vh;">
+        <p style="height: 3vh;"></p>
+        <center>
+            <span style="font-size: 60px; -webkit-text-fill-color: rgb(255, 136, 0)">Sustainable development Goal No.5</span>
+            <table>
+                <tr>
+                    <td style="font-size: 80px; -webkit-text-fill-color: teal"><span>5<span style="-webkit-text-fill-color: tomato;">.</span>1<span style="-webkit-text-fill-color: tomato;">.</span></span></td>
+                    <td style="padding-left: 20px; font-size: 20px; width: 40vw; word-wrap:break-word; display: inline-block;">
+                        End all forms of discrimination against all women and girls everywhere
+                    </td>
+                    <td style="font-size: 80px; -webkit-text-fill-color: teal"><span>5<span style="-webkit-text-fill-color: tomato;">.</span>2<span style="-webkit-text-fill-color: tomato;">.</span></span></td>
+                    <td style="padding-left: 20px; font-size: 20px; width: 40vw; word-wrap:break-word; display: inline-block;">
+Eliminate all forms of violence against all women and girls in the public and private spheres, including trafficking and sexual and other types of exploitation                </tr>
+                <tr>
+                        <td style="font-size: 80px; -webkit-text-fill-color: teal"><span>5<span style="-webkit-text-fill-color: tomato;">.</span>3<span style="-webkit-text-fill-color: tomato;">.</span></span></td>
+                        <td style="padding-left: 20px; font-size: 20px; width: 40vw; word-wrap:break-word; display: inline-block;">
+Eliminate all harmful practices, such as child, early and forced marriage and female genital mutilation
+                        <td style="font-size: 80px; -webkit-text-fill-color: teal"><span>5<span style="-webkit-text-fill-color: tomato;">.</span>4<span style="-webkit-text-fill-color: tomato;">.</span></span></td>
+                        <td style="padding-left: 20px; font-size: 20px; width: 40vw; word-wrap:break-word; display: inline-block;">
+Recognize and value unpaid care and domestic work through the provision of public services, infrastructure and social protection policies and the promotion of shared responsibility within the household and the family as nationally appropriate
+                </tr>
+                <tr>
+                    <td style="font-size: 80px; -webkit-text-fill-color: teal"><span>5<span style="-webkit-text-fill-color: tomato;">.</span>5<span style="-webkit-text-fill-color: tomato;">.</span></span></td>
+                    <td style="padding-left: 20px; font-size: 20px; width: 40vw; word-wrap:break-word; display: inline-block;">
+Ensure women’s full and effective participation and equal opportunities for leadership at all levels of decision-making in political, economic and public life
                     </td>
                     <td></td>
                     <td>
