--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div style="position: absolute; left:10px; bottom: 10px; filter: opacity(80%)">
             <a href="#sdg9"><img src="./img/sdg9.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
-            <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Looking For Innovation</span>
+            <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">We are Looking For Innovation</span>
                 <br>
             <a href="#sgd5"><img src="./img/sdg5.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Commited to Gender Equality</span>
