--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#sdg9"><img src="./img/sdg9.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">We are Looking For Innovation</span>
                 <br>
-            <a href="#sgd5"><img src="./img/sdg5.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
+            <a href="#sdg5"><img src="./img/sdg5.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Commited to Gender Equality</span>
                 <br>
             <img src="./img/sdg7.png" class="sdg" style="margin-bottom: 10px" alt="">
