--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <a href="#sdg9"><img src="./img/sdg9.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">We are Looking For Innovation</span>
                 <br>
-            <a href="#sdg5"><img src="./img/sdg5.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
+            <a href="#oops"><img src="./img/sdg5.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Commited to Gender Equality</span>
                 <br>
-            <img src="./img/sdg7.png" class="sdg" style="margin-bottom: 10px" alt="">
+            <a href="#oops"><img src="./img/sdg7.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Looking Forward Green Energy</span>
                 <br>
-            <img src="./img/sdg4.png" class="sdg" style="margin-bottom: 10px" alt="">
+            <a href="#oops"><img src="./img/sdg4.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Presenting a High Quality Education</span>
                 <br>
         </div>
