--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">We are Looking For Innovation</span>
                 <br>
             <a href="#oops"><img src="./img/sdg5.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
-            <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Commited to Gender Equality</span>
+            <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Committed to Gender Equality</span>
                 <br>
             <a href="#oops"><img src="./img/sdg7.png" class="sdg" style="margin-bottom: 10px" alt=""></a>
             <span class="sdgtext" style="word-wrap:break-word; display: inline-block; -webkit-text-fill-color:white">Looking Forward Green Energy</span>
