--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <a href="#oops"><button class="xnavBarBtn" id="">Organizers Editorial</button></a>
 
-            <a href="#sponsor_edit"><button class="xnavBarBtn" id="">Sponsor's Editorial</button></a>
+            <a href="#oops"><button class="xnavBarBtn" id="">Sponsor's Editorial</button></a>
 
             <a href="#contact"><button class="xnavBarBtn" id="">Contact</button></a>
 
