--- a/vlab/engin.html
+++ b/vlab/engin.html
@@ -1,3 +1,5 @@
+<script src="https://code.highcharts.com/highcharts.js"></script>
+
 <script src="../hchrts/highcharts.js"></script>
 <script src="../hchrts/modules/exporting.js"></script>
 <script src="../hchrts/modules/export-data.js"></script>
