--- a/vlab/engin.html
+++ b/vlab/engin.html
@@ -12,9 +12,12 @@
 <button onclick="doAll()">All</button>
 <br>
 <button onclick="doComp()">Simple Harmonic Motion</button>
-<input id="xo" type="number" value=0 placeholder="X0">
-<input id="omiga" type="number" value=0 placeholder="Natural Freq.">
-<input id="time" type="number" value=0 placeholder="Time">
+<span>X0</span>
+<input id="xo" type="number" value=0>
+<span>Natural Freq.</span>
+<input id="omiga" type="number" value=0>
+<span>Time</span>
+<input id="time" type="number" value=0>
 
 <div style="width: 100%;">
     <figure class="highcharts-figure">
