--- a/vlab/engin.html
+++ b/vlab/engin.html
@@ -326,14 +326,10 @@
     
     function doSHM(){
         xs = [];
-        i = 0;
         to = 0;
         t=document.getElementById("time").value;
         while(to!=t){
-            while(i!=document.getElementById("num").value){
-                xs[i]= (document.getElementById("xo").value)*Math.sin((document.getElementById("omiga").value)*to);
-                i+=1;
-            }
+            xs[to]= (document.getElementById("xo").value)*Math.sin((document.getElementById("omiga").value)*to);
             to+=1;
         }
         Highcharts.seriesTypes.line.prototype.getPointSpline = Highcharts.seriesTypes.spline.prototype.getPointSpline;
