--- a/vlab/engin.html
+++ b/vlab/engin.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./vlstyle.css">
+<link rel="stylesheet" href="vlstyle.css">
 <script src="https://code.highcharts.com/highcharts.js"></script>
 
 <script src="../hchrts/highcharts.js"></script>
