--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="xnavBar">
         <ul class="smooth-scroll" style="padding: 0px; width: 100%">                
             <a href="#oops"><button class="xnavBarBtn" id="">Media</button></a>   
-            <a href="#oops"><button class="xnavBarBtn" id="">Get Started</button></a>
+            <a href="./vlab/engin.html"><button class="xnavBarBtn" id="">Virtual Lab</button></a>
 
             <a href="#lrn"><button class="xnavBarBtn" id="">Learning</button></a>           
                 
