--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="xnavBar">
         <ul class="smooth-scroll" style="padding: 0px; width: 100%">                
             <a href="#oops"><button class="xnavBarBtn" id="">Media</button></a>   
-            <a href="./vlab/engin.html"><button class="xnavBarBtn" id="">Virtual Lab</button></a>
+            <a href="./vlab/engin.html"><button class="xnavBarBtn" id="">Lab</button></a>
 
             <a href="#lrn"><button class="xnavBarBtn" id="">Learning</button></a>           
                 
@@ -31,7 +31,7 @@
 
             <a href="#contact"><button class="xnavBarBtn" id="">Contact</button></a>
 
-            <p id="titler" class="navBarCaption" style="font-size: 17px; padding-top: 3px">Sponsor for 2020: Faculty of Mechanical Engineering - Alfurat University</p>
+            <p id="titler" class="navBarCaption" style="font-size: 17px; padding-top: 3px">Hello, World !</p>
         </ul>
     </div>
     <header id="top" style="height: 100vh;">
