--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
             <a href="#oops"><button class="xnavBarBtn" id="">Organizers Editorial</button></a>
 
             <a href="#oops"><button class="xnavBarBtn" id="">Sponsor's Editorial</button></a>
-
+            <a href="#lrn"><button class="xnavBarBtn" id="">Hello, World !</button></a>
+            <a href="#lrn"><button class="xnavBarBtn" id="">What is this ?</button></a>
             <a href="#contact"><button class="xnavBarBtn" id="">Contact</button></a>
+                       
+
 
             <p id="titler" class="navBarCaption" style="font-size: 17px; padding-top: 3px">Hello, World !</p>
         </ul>
