--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#oops"><button class="xnavBarBtn" id="">Organizers Editorial</button></a>
 
             <a href="#oops"><button class="xnavBarBtn" id="">Sponsor's Editorial</button></a>
-            <a href="#lrn"><button class="xnavBarBtn" id="">There Is a Lot Here</button></a>
+            <a href="#lrn"><button class="xnavBarBtn" id="">There Is a Lot of What You Need Here</button></a>
             <a href="#lrn"><button class="xnavBarBtn" id="">What is this ?</button></a>
             <a href="#contact"><button class="xnavBarBtn" id="">Contact</button></a>
                        
