--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                        
 
 
-            <p id="titler" class="navBarCaption" style="font-size: 17px; padding-top: 3px">Hello, World !</p>
+            <p id="titler" class="navBarCaption" style="font-size: 17px; padding-top: 3px"></p>
         </ul>
     </div>
     <header id="top" style="height: 100vh;">
