--- a/index.html
+++ b/index.html
@@ -234,3 +234,13 @@
         document.getElementById("titler").innerHTML = "Project Team";
     });*/
 </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164183099-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-164183099-1');
+</script>
+
